# z_sharp

./: .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  TODO.md  code_of_conduct.md  install.deb.sh  license.md  readme.md  test.sh  todo.md
i18n/: en.toml
src/: build.rs  build_config.rs  config.rs  lib.rs  version.rs  version.toml
src/coral/: mod.rs  todo.md
src/lexer/: capture.rs  consumer.rs  mod.rs
src/macros/: assembly.inc  test.inc  todo.md  turbo.inc
src/macros/test_arch/: arm64.inc
src/modification/: capture.rs  consumer.rs  gluea.rs  lua.rs  mod.rs
src/modification/lua/: mod.rs
src/standard/: .darklua.jsonc  .luaurc  build.sh  core.lua  core.luau  init.luau  patterns.luau  todo.md
src/standard/src/: core.luau  init.luau  patterns.luau
src/standard/src/chains/: function.luau  whitespace.luau
src/standard/src/features/: function.luau  structure.luau  test.luau  type_reference.luau  whitespace.luau
src/typed/: .luaurc  lexer.d.luau  sugar.luau  user_data.luau  z_sharp.d.luau
src/typed/features/: TODO.md  core.luau  example.luau
tests/: core.lua  goal.zs  my_mod.rs  standard.rs  test.zs  tests.rs
tests/coverage/: default_1019810605683876968_0_300320.profraw  default_1019810605683876968_0_300321.profraw  default_1019810605683876968_0_300562.profraw  default_1019810605683876968_0_300564.profraw  default_1019810605683876968_0_310713.profraw  default_1019810605683876968_0_310714.profraw  default_1019810605683876968_0_310921.profraw  default_1019810605683876968_0_310922.profraw  default_1019810605683876968_0_312879.profraw  default_1019810605683876968_0_312881.profraw  default_1019810605683876968_0_313133.profraw  default_1019810605683876968_0_313134.profraw  default_1019810605683876968_0_313527.profraw  default_1019810605683876968_0_313528.profraw  default_1019810605683876968_0_315284.profraw  default_1019810605683876968_0_315285.profraw  default_1019810605683876968_0_320710.profraw  default_1019810605683876968_0_320711.profraw  default_1019810605683876968_0_321089.profraw  default_1019810605683876968_0_321090.profraw  default_1019810605683876968_0_321731.profraw  default_1019810605683876968_0_321733.profraw  default_1019810605683876968_0_321941.profraw  default_1019810605683876968_0_321942.profraw  default_1019810605683876968_0_322342.profraw  default_1019810605683876968_0_322344.profraw  default_1019810605683876968_0_322594.profraw  default_1019810605683876968_0_322595.profraw  default_1019810605683876968_0_323083.profraw  default_1019810605683876968_0_323084.profraw  default_1019810605683876968_0_3235865.profraw  default_1019810605683876968_0_3235905.profraw  default_1019810605683876968_0_323612.profraw  default_1019810605683876968_0_323613.profraw  default_1019810605683876968_0_3236138.profraw  default_1019810605683876968_0_3236139.profraw  default_1019810605683876968_0_3240249.profraw  default_1019810605683876968_0_3240250.profraw  default_1019810605683876968_0_3240585.profraw  default_1019810605683876968_0_3240586.profraw  (+1245 more)
