[package]
name = "z_sharp"
version = "0.0.0"
edition = "2024"

[lib]
name = "z_sharp"

[dependencies]
lazy_static = "1.5.0"
mlua = { version = "0.11.4", features = ["lua54", "serde"] }
nestify = "0.3.3"
once_cell = "1.21.3"
regex = "1.12.2"
serde_regex = "1.1.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
tracing = "0.1.41"
derive_more = { version = "2.0.1", features = ["full"] }
static-toml = "1.3.0"
strum_macros = "0.27.2"
strum = "0.27.2"

[dev-dependencies]
tracing-subscriber = "0.3.20"
time-test = { version = "0.3.0" }

[features]
