[package]
name = "z_sharp"
version = "0.0.0"
authors = ["Brendan Lucas <brendan@mail.renderlabs.cloud>"]
description = "The official Z# language crate — a high-efficiency, low-level language focused on speed, structure, and simplicity."
license = "MIT"
edition = "2024"

[lib]
name = "z_sharp"

[dependencies]
# Lua
mlua = { version = "0.11.4", features = ["lua54", "serde", "macros", "userdata-wrappers"] }
mlua-magic-macros = "0.1.2" # Made by me!
# mlua-extras = "0.0.7"
serde = { version = "1.0.228", features = ["derive", "rc"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
parking_lot = { version = "0.12.5" } 
# Regex
regex = "1.12.2"
serde_regex = "1.1.0"
# Macros
derive_more = { version = "2.0.1", features = ["full"] }
lazy_static = "1.5.0"
nestify = "0.3.3"
tracing = "0.1.41" # TODO: Move to dev
static-toml = "1.3.0"
# International support with i18n
rust-i18n = "*"



[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
time-test = { version = "0.3.0" }
tracing-subscriber = "0.3.20"

[features]


# My style footer
[lints.clippy]
needless_return = "allow"
redundant_field_names = "allow"
unused_unit = "allow"
