[package]
	name = "z_sharp"
	version = "0.0.0"
	authors = ["Brendan Lucas <brendan@mail.renderlabs.cloud>"]
	description = "The official Z# language crate — a high-efficiency, low-level language focused on speed, structure, and simplicity."
	license = "MIT"
	edition = "2024"

[lib]
	name = "z_sharp"

[dependencies]
	anyhow = "1.0.100"
	# Lua.
	mlua = { version = ">=0.11.4", features = ["luau", "serde", "macros", "userdata-wrappers"] }
	mlua-magic-macros = "^0" # Made by me!
	serde = { version = ">=1.0.228", features = ["derive", "rc"] }
	tokio = { version = ">=1.48.0", features = ["rt-multi-thread", "macros", "time"] }
	# parking_lot = { version = ">=0.12.5" } 
	serde_json = "^1"
	toml = "0.9.8"
	# Regex.
	regex = ">=1.12.2"
	serde_regex = "^1.1.0"
	# Macros.
	derive_more = { version = ">=2.0.1", features = ["full"] }
	log = "0.4.29"
	unwrap = "1.2.1"
	lazy_static = "^1.5.0"
	paste = "^1"
	static-toml = ">=1.3.0"
	# International support with i18n.
	rust-i18n = ">=3"
	# My commonly used dependencies.
	enum_dispatch = ">=0.3"
	nestify = ">=0.3"
	# My style footer


[dev-dependencies]
	tokio = { version = "1.44.0", features = ["full"] }
	time-test = { version = "0.3.0" }
	tracing-subscriber = "0.3.20"

# [features]
#
# [[bin]]
#	name = "zs"
#	path = "cli/main.rs"
#	required-features = ["cli"]

# My style footer
[lints.clippy]
	needless_return = "allow"
	redundant_field_names = "allow"
	unused_unit = "allow"
